--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ html,body{
     color: white;
     font-family: "General Sans-Regular"; 
 }
+#cursor{
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    background-color: white;
+    z-index: 9999;
+    border-radius: 50%;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
 #main{
     width: 100%;
     background-color: rgb(0,0,0);
